
The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [Unreleased]

### Added

- Novo comando de imagem `/vasco`
- Resolvido o comando inventário não funcionar caso o usuário tenha o item `Necare Hêmítheos`

## [3.4.2] 2021-11-09

### Fix

- Problema no comando inventário
- Badges de usuário casado mostrando mesmo se o usuário não estiver casado

## [3.4.1] 2021-11-09

### Fix

- Resolvido problema que o sistema de votos não salvava os dados

## [3.4.0] 2021-11-08

### Added

- NOVO COMANDO! `/inventario`
- NOVO SISTEMA! **ITEMS MÁGICOS** - Com itens mágicos, usuários podem aumentar suas chances de caça, trazendo alguns tipos de caças para sempre obterem sucesso
- Tempo de Cooldown de caças: O tempo base da caça é de uma hora, mas esse tempo pode ser reduzido a partir de itens mágicos que reduzem o cooldown de caça. Esses itens possuem uma porcentagem de drop ao caçar
- Usuários banidos não podem ser mamados
- **Punição por inatividade:** Usuários que não usarem comandos por mais de 2 semanas vão perder itens da carteira! A punição se aplica a usuários que tem no mínimo uma dessas características: 60 demônios, 50 gigantes, 40 anjos, 30 arcanjos, 20 semideuses, 7 deuses ou 250000 estrelinhas. A punição depende de quantas semanas tu ta offline e a quantidade de itens que tu tens. O calculo é feito por a sua quantidade dividida por 8 ( ou 4 dependendo da quantidade que tens) vezes o numero de semanas que tu ficou fora. Lembrando que a cada dia acima de 2 semanas teus itens diminuem!. A Punição por Inatividade só começará a contar a partir de dezembro.
- Caso você tenha mais de 10 cores, a escolha de cores irá mudar para uma escolha de páginas

### Changed

- Opções de Comandos - Os comandos que utilizam opções de escolha foram melhorados para ficarem mais bonitinhos
- O modo que o ship é calculado foi alterado